added app analysis

--- a/References.bib
+++ b/References.bib
@@ -1,271 +1,320 @@
-@misc{aramis-matos_skybounddb_2022,
+@software{aramis-matos_skybounddb_2022,
   title = {{{SkyboundDB}}: {{The GBFVS Frame Data Calculator}}},
   shorttitle = {{{SkyboundDB}}},
-  author = {{aramis-matos}},
-  year = {2022},
-  month = aug
+  author = {aramis- {matos}},
+  options = {useprefix=true},
+  date = {2022-08-27T22:53:34Z},
+  origdate = {2021-02-25T23:50:49Z},
+  url = {https://github.com/aramis-matos/SkyboundDB},
+  urldate = {2022-09-09}
 }
 
-@misc{bowman_why_2014,
+@online{bowman_why_2014,
   title = {Why the Fighting Game Community Is Color Blind},
   author = {Bowman, Mitch},
-  year = {2014},
-  month = feb,
-  journal = {Polygon},
+  date = {2014-02-06T12:01:01-05:00},
+  url = {https://www.polygon.com/features/2014/2/6/5361004/fighting-game-diversity},
+  urldate = {2022-10-26},
   abstract = {How the FGC's roots grew the most racially diverse community in gaming.},
   langid = {american},
-  file = {/home/smokey/Zotero/storage/G8RXZDTU/fighting-game-diversity.html}
+  organization = {{Polygon}},
+  file = {/home/ccyanide/Zotero/storage/G8RXZDTU/fighting-game-diversity.html}
 }
 
-@misc{core-a_gaming_analysis_2019,
+@video{core-a_gaming_analysis_2019,
   title = {Analysis: {{Why Button Mashing Doesn}}'t {{Work}}},
   shorttitle = {Analysis},
-  author = {{Core-A Gaming}},
-  year = {2019},
-  month = may
+  editor = {{Core-A Gaming}},
+  date = {2019-05-10},
+  url = {https://www.youtube.com/watch?v=_R0hbe8HZj0},
+  urldate = {2022-09-10},
+  editortype = {director}
 }
 
-@misc{d4rkonion_fat_2022,
+@software{d4rkonion_fat_2022,
   title = {{{FAT}} 3},
   author = {D4RKONION},
-  year = {2022},
-  month = aug,
-  abstract = {FAT - SF Frame Data App},
-  copyright = {GPL-3.0}
+  date = {2022-08-09T09:46:08Z},
+  origdate = {2021-02-28T19:18:13Z},
+  url = {https://github.com/D4RKONION/FAT},
+  urldate = {2022-09-03},
+  abstract = {FAT - SF Frame Data App}
 }
 
-@misc{desjardins_which_2018,
+@online{desjardins_which_2018,
   title = {Which {{College Degrees Get}} the {{Highest Salaries}}?},
   author = {Desjardins, Jeff},
-  year = {2018},
-  month = jul,
-  journal = {Visual Capitalist},
+  date = {2018-07-25T13:30:33-07:00},
+  url = {https://www.visualcapitalist.com/visualizing-salaries-college-degrees/},
+  urldate = {2022-09-16},
   abstract = {How do different college degrees compare for earning potential? This chart uses a data set from 1.2 million past students to compare 50 different majors.},
-  howpublished = {https://www.visualcapitalist.com/visualizing-salaries-college-degrees/},
-  langid = {american}
+  langid = {american},
+  organization = {{Visual Capitalist}}
 }
 
-@misc{dustloop_using_2022,
+@online{dustloop_using_2022,
   title = {Using {{Frame Data}}},
   author = {{Dustloop}},
-  year = {2022},
-  month = aug,
-  journal = {Dustloop Wiki},
-  howpublished = {https://www.dustloop.com/w/Using\_Frame\_Data},
+  date = {2022-08-18T07:01:56Z},
+  url = {https://www.dustloop.com/w/Using_Frame_Data},
+  urldate = {2022-09-03},
   langid = {english},
-  file = {/home/smokey/Zotero/storage/IBVPRMSH/Using_Frame_Data.html}
+  organization = {{Dustloop Wiki}},
+  file = {/home/ccyanide/Zotero/storage/IBVPRMSH/Using_Frame_Data.html}
 }
 
-@misc{noauthor_fighting_nodate,
+@online{noauthor_designing_nodate,
+  title = {Designing with {{Material}}},
+  url = {https://design.google/library/designing-material/},
+  urldate = {2022-11-25},
+  abstract = {Material makes it easier for product teams to build beautiful, usable products faster. Dive into the latest Material features with this collection of articles, case studies, and product profiles.},
+  langid = {english},
+  organization = {{Google Design}},
+  file = {/home/ccyanide/Zotero/storage/PVNMY67R/designing-material.html}
+}
+
+@online{noauthor_evo_nodate,
+  title = {{{EVO}} 2022: {{All}} the {{UK}} Esports Talent Taking Part in the {{FGC}} Event This Weekend - {{Esports News UK}}},
+  url = {https://esports-news.co.uk/2022/08/05/evo-2022-uk-esports-talent/},
+  urldate = {2022-11-05},
+  file = {/home/ccyanide/Zotero/storage/RV57VMTU/evo-2022-uk-esports-talent.html}
+}
+
+@online{noauthor_fighting_nodate,
   title = {The {{Fighting Game Glossary}} | Infil.Net},
-  howpublished = {https://glossary.infil.net/?t=Frame\%20Advantage},
-  file = {/home/smokey/Zotero/storage/LWDAVKXQ/glossary.infil.net.html}
+  url = {https://glossary.infil.net/?t=Health%20Bar},
+  urldate = {2022-09-10},
+  file = {/home/ccyanide/Zotero/storage/SIYAI4HW/glossary.infil.net.html}
 }
 
-@misc{noauthor_fighting_nodate-1,
+@online{noauthor_fighting_nodate-1,
   title = {The {{Fighting Game Glossary}} | Infil.Net},
-  howpublished = {https://glossary.infil.net/?t=Frame\%20Data},
-  file = {/home/smokey/Zotero/storage/6NAGY6S5/glossary.infil.net.html}
+  url = {https://glossary.infil.net/?t=Frame%20Data},
+  urldate = {2022-09-10},
+  file = {/home/ccyanide/Zotero/storage/6NAGY6S5/glossary.infil.net.html}
 }
 
-@misc{noauthor_fighting_nodate-2,
+@online{noauthor_fighting_nodate-2,
   title = {The {{Fighting Game Glossary}} | Infil.Net},
-  howpublished = {https://glossary.infil.net/?t=Health\%20Bar},
-  file = {/home/smokey/Zotero/storage/SIYAI4HW/glossary.infil.net.html}
+  url = {https://glossary.infil.net/?t=Frame%20Advantage},
+  urldate = {2022-09-09},
+  file = {/home/ccyanide/Zotero/storage/LWDAVKXQ/glossary.infil.net.html}
 }
 
-@misc{noauthor_flexible_nodate,
-  title = {Flexible {{Information Technology Jobs}} in {{Mayag\"uez}}, {{PR}} | {{Indeed}}.Com},
-  howpublished = {https://www.indeed.com/jobs?q=information+technology\&l=Mayaguez\%2C+PR\&vjk=94f86e7ac3fabfe1}
+@online{noauthor_flexible_nodate,
+  title = {Flexible {{Information Technology Jobs}} in {{Mayagüez}}, {{PR}} | {{Indeed}}.Com},
+  url = {https://www.indeed.com/jobs?q=information+technology&l=Mayaguez%2C+PR&vjk=94f86e7ac3fabfe1},
+  urldate = {2022-09-16}
 }
 
-@article{noauthor_granblue_2022,
-  title = {{\emph{Granblue }}{{{\emph{Fantasy Versus}}}}},
-  year = {2022},
-  month = aug,
-  journal = {Wikipedia},
+@online{noauthor_granblue_2022,
+  title = {Granblue {{Fantasy Versus Wiki}}},
+  date = {2022-08-12T20:03:39Z},
+  url = {https://www.dustloop.com/w/Granblue_Fantasy_Versus},
+  urldate = {2022-10-31},
+  abstract = {The open resource for Granblue Fantasy Versus. Home to combos, character guides, frame data, hitboxes, and more.},
+  langid = {english},
+  organization = {{Dustloop Wiki}},
+  file = {/home/ccyanide/Zotero/storage/Z5LQ8J8X/Granblue_Fantasy_Versus.html}
+}
+
+@inreference{noauthor_granblue_2022-1,
+  title = {\emph{Granblue }{{\emph{Fantasy Versus}}}},
+  booktitle = {Wikipedia},
+  date = {2022-08-21T14:22:01Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Granblue_Fantasy_Versus&oldid=1105731908},
+  urldate = {2022-09-10},
   abstract = {Granblue Fantasy Versus is a 2.5D fighting game developed by Arc System Works for the PlayStation 4. It is based on the role-playing video game Granblue Fantasy, and it was released in Japan and Asia by Cygames, and TSS Ventures (Tencent, Square Enix, and Sega) respectively on February 6, 2020, and North America by Marvelous' Xseed Games on March 3, 2020. Microsoft Windows release was officially announced for March 13, 2020, to commemorate the 6th anniversary of the series.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1105731908},
-  file = {/home/smokey/Zotero/storage/9AWJ3B6Q/Granblue_Fantasy_Versus.html}
+  file = {/home/ccyanide/Zotero/storage/9AWJ3B6Q/Granblue_Fantasy_Versus.html}
 }
 
-@misc{noauthor_granblue_2022-1,
-  title = {Granblue {{Fantasy Versus Wiki}}},
-  year = {2022},
-  month = aug,
-  journal = {Dustloop Wiki},
-  abstract = {The open resource for Granblue Fantasy Versus. Home to combos, character guides, frame data, hitboxes, and more.},
-  howpublished = {https://www.dustloop.com/w/Granblue\_Fantasy\_Versus},
-  langid = {english},
-  file = {/home/smokey/Zotero/storage/Z5LQ8J8X/Granblue_Fantasy_Versus.html}
-}
-
-@misc{noauthor_grasshopper_nodate,
+@online{noauthor_grasshopper_nodate,
   title = {Grasshopper ({{Character Balancing}} / {{Frame Data Tool}})},
   author = {, RobotMonkeyHead},
-  journal = {Mugen Free For All},
+  url = {https://mugenfreeforall.com/topic/27012-grasshopper-character-balancing-frame-data-tool/},
+  urldate = {2022-09-03},
   abstract = {Hello MFFA peoples! This is a character balancing / frame data tool I made a couple years back called Grasshopper. I finally just finished polishing it off. It allows you to gather multiple characters' frame data and damage values on a chart. You can easily copy / paste / move them around for ave...},
-  howpublished = {https://mugenfreeforall.com/topic/27012-grasshopper-character-balancing-frame-data-tool/},
   langid = {american},
-  file = {/home/smokey/Zotero/storage/HP9A3SZ4/27012-grasshopper-character-balancing-frame-data-tool.html}
+  organization = {{Mugen Free For All}},
+  file = {/home/ccyanide/Zotero/storage/HP9A3SZ4/27012-grasshopper-character-balancing-frame-data-tool.html}
 }
 
-@misc{noauthor_guide_nodate,
+@online{noauthor_guide_nodate,
   title = {A {{Guide}} to {{Frame Data}} - {{Dream Cancel}}},
-  howpublished = {https://dreamcancel.com/2011/10/a-guide-to-frame-data/},
-  file = {/home/smokey/Zotero/storage/N8QSFY5X/a-guide-to-frame-data.html}
+  url = {https://dreamcancel.com/2011/10/a-guide-to-frame-data/},
+  urldate = {2022-09-03},
+  file = {/home/ccyanide/Zotero/storage/N8QSFY5X/a-guide-to-frame-data.html}
 }
 
-@article{noauthor_guilty_2022,
-  title = {{\emph{Guilty }}{{{\emph{Gear Strive}}}}},
-  year = {2022},
-  month = aug,
-  journal = {Wikipedia},
+@inreference{noauthor_guilty_2022,
+  title = {\emph{Guilty }{{\emph{Gear Strive}}}},
+  booktitle = {Wikipedia},
+  date = {2022-08-25T05:39:24Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Guilty_Gear_Strive&oldid=1106552864},
+  urldate = {2022-09-03},
   abstract = {Guilty Gear Strive is a fighting video game developed and published by Arc System Works. It is the seventh mainline installment of the Guilty Gear series, and the 25th overall. The game was released worldwide on June 11, 2021 to generally positive reviews.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1106552864},
-  file = {/home/smokey/Zotero/storage/3KK3D2HH/Guilty_Gear_Strive.html}
+  file = {/home/ccyanide/Zotero/storage/3KK3D2HH/Guilty_Gear_Strive.html}
 }
 
-@misc{noauthor_melty_nodate,
+@online{noauthor_melty_nodate,
   title = {{{MELTY BLOOD}}: {{TYPE LUMINA}} Official Website},
-  howpublished = {https://meltyblood.typelumina.com/en/}
+  url = {https://meltyblood.typelumina.com/en/},
+  urldate = {2022-10-27}
 }
 
-@misc{noauthor_numpad_nodate,
+@online{noauthor_numpad_nodate,
   title = {Numpad Notation},
-  journal = {Fighting Game Collectors Wiki},
+  url = {https://fighting-game-collectors.fandom.com/wiki/Numpad_notation},
+  urldate = {2022-10-26},
   abstract = {Numpad notation is a form of fighting game notation in which the directions that you may move in a fighting game are mapped to the layout of a keyboard's numpad. The notation is oriented as follows, with the "N" in the middle representing "neutral:" Numpad notation is the most convenient way to quickly transcribe complex inputs and combos. It originated as an easy way of discussing fighting game commands before arrow keys were commonly available on computer character sets. They are now mostly in},
-  howpublished = {https://fighting-game-collectors.fandom.com/wiki/Numpad\_notation},
   langid = {english},
-  file = {/home/smokey/Zotero/storage/WNZIYBN7/Numpad_notation.html}
+  organization = {{Fighting Game Collectors Wiki}},
+  file = {/home/ccyanide/Zotero/storage/WNZIYBN7/Numpad_notation.html}
 }
 
-@misc{noauthor_rubendalssbu-calculator_nodate,
+@online{noauthor_rubendalssbu-calculator_nodate,
   title = {Rubendal/{{SSBU-Calculator}}: {{Smash Ultimate}} Knockback Calculator},
-  howpublished = {https://github.com/rubendal/SSBU-Calculator},
-  file = {/home/smokey/Zotero/storage/UNS2L4AJ/SSBU-Calculator.html}
+  url = {https://github.com/rubendal/SSBU-Calculator},
+  urldate = {2022-09-03},
+  file = {/home/ccyanide/Zotero/storage/UNS2L4AJ/SSBU-Calculator.html}
 }
 
-@misc{noauthor_salary_nodate,
+@online{noauthor_salary_nodate,
   title = {Salary: {{Information Technology}} ({{September}}, 2022)},
   shorttitle = {Salary},
+  url = {https://www.glassdoor.com/Salaries/information-technology-salary-SRCH_KO0,22.htm},
+  urldate = {2022-09-16},
   abstract = {The average salary for an Information Technology is \$51,315 per year in US. Click here to see the total pay, recent salaries shared and more!},
-  howpublished = {https://www.glassdoor.com/Salaries/information-technology-salary-SRCH\_KO0,22.htm},
   langid = {english},
-  file = {/home/smokey/Zotero/storage/3J84CTQY/information-technology-salary-SRCH_KO0,22.html}
+  file = {/home/ccyanide/Zotero/storage/3J84CTQY/information-technology-salary-SRCH_KO0,22.html}
 }
 
-@misc{noauthor_sistema_nodate,
-  title = {Sistema de Informaci\'on - {{Qu\'e}} Es, Definici\'on y Concepto | 2022 | {{Economipedia}}},
-  howpublished = {https://economipedia.com/definiciones/sistema-de-informacion.html},
-  file = {/home/smokey/Zotero/storage/DXCMP4DK/sistema-de-informacion.html}
+@online{noauthor_sistema_nodate,
+  title = {Sistema de Información - {{Qué}} Es, Definición y Concepto | 2022 | {{Economipedia}}},
+  url = {https://economipedia.com/definiciones/sistema-de-informacion.html},
+  urldate = {2022-09-16},
+  file = {/home/ccyanide/Zotero/storage/DXCMP4DK/sistema-de-informacion.html}
 }
 
-@misc{noauthor_smash_nodate,
+@online{noauthor_smash_nodate,
   title = {Smash {{Ultimate Calculator}}},
-  howpublished = {https://rubendal.github.io/SSBU-Calculator/},
-  file = {/home/smokey/Zotero/storage/M78NKGE9/SSBU-Calculator.html}
+  url = {https://rubendal.github.io/SSBU-Calculator/},
+  urldate = {2022-09-03},
+  file = {/home/ccyanide/Zotero/storage/M78NKGE9/SSBU-Calculator.html}
 }
 
-@article{noauthor_street_2022,
-  title = {{\emph{Street }}{{{\emph{Fighter V}}}}},
-  year = {2022},
-  month = aug,
-  journal = {Wikipedia},
+@online{noauthor_steam_nodate,
+  title = {Steam {{Deck}} :: {{Dock}}},
+  shorttitle = {Steam {{Deck}}},
+  url = {https://www.steamdeck.com/en/dock},
+  urldate = {2022-11-05},
+  abstract = {Steam Deck is here!},
+  organization = {{Steam Deck}},
+  file = {/home/ccyanide/Zotero/storage/UQAMKE6Y/dock.html}
+}
+
+@inreference{noauthor_street_2022,
+  title = {\emph{Street }{{\emph{Fighter V}}}},
+  booktitle = {Wikipedia},
+  date = {2022-08-21T12:59:22Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Street_Fighter_V&oldid=1105720233},
+  urldate = {2022-09-03},
   abstract = {Street Fighter V is a fighting game developed by Capcom and Dimps and published by Capcom for the PlayStation 4 and Microsoft Windows in 2016. Similar to the previous games in the Street Fighter series, Street Fighter V features a side-scrolling fighting gameplay system. The game also introduces the "V-Gauge", which builds as the player receives attacks and adds three new skills. The game features 16 characters at launch, with four of them being new to the series. A main story mode and 30 additional characters were added through updates and downloadable content. According to Capcom, the game is a PlayStation 4 console exclusive due to both Sony and Capcom having "the same vision for the growth potential in the fighting game space". The game is powered by Unreal Engine 4, and had a beta test prior to its launch. Upon release, the game received mixed reviews, with critics praising the game's graphics and gameplay, but criticizing its lack of content and characters, as well as its technical issues such as broken servers at launch and software bugs. Capcom was expecting the game to sell at least 2 million copies by the end of their fiscal year 2016, a target that was missed, selling only 1.4 million copies as of March 31, 2016. As of June 30, 2022, the game's accumulated sales reached 6.60 million, making it the best selling Street Fighter game on home consoles, surpassing Street Fighter II according to Capcom's Platinum Titles fiscal report.Its update, Street Fighter V: Arcade Edition, was released on January 16, 2018, and was received more positively, with improvements to the user interface and content, in particular its single-player modes and the addition of the much-requested Arcade Mode. A second update, titled Street Fighter V: Champion Edition, includes all fighters, stages, and most of the costumes released through its fourth season. It was released on February 14, 2020, receiving a physical release in the form of the original Street Fighter V disc, containing a voucher code to download the remaining content.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1105720233},
-  file = {/home/smokey/Zotero/storage/7KSQ6TNP/Street_Fighter_V.html}
+  file = {/home/ccyanide/Zotero/storage/7KSQ6TNP/Street_Fighter_V.html}
 }
 
-@article{noauthor_street_2022-1,
-  title = {{\emph{Street }}{{{\emph{Fighter IV}}}}},
-  year = {2022},
-  month = jul,
-  journal = {Wikipedia},
-  abstract = {Street Fighter IV (ストリートファイター IV, Sutor\=ito Fait\=a F\=o) is a 2008 fighting game published by Capcom, who also co-developed the game with Dimps. It was the first original main entry in the series since Street Fighter III in 1997, a hiatus of eleven years. The coin-operated arcade game version was released in Japan on July 18, 2008, with North American arcades importing the machines by August. The console versions for the PlayStation 3 and Xbox 360 were released in Japan on February 12, 2009, and were sold in North American stores as early as February 16, with a February 18 intended release date.  The official European release was on February 20. A Microsoft Windows version was released on July 2, 2009, in Japan, July 3, 2009 in Europe and July 7, 2009, in the United States. A version for iOS was released on March 10, 2010. Also, an Android version was launched, initially as an exclusive for certain LG devices. Then by December 31, 2012, the exclusivity expired and the game was made available for all Android devices on the Play Store, with a region restriction that makes it available only in Japan. An updated version, Super Street Fighter IV, was released as a standalone title in April 2010.Street Fighter IV received universal critical acclaim; receiving universally high scores from many gaming websites and magazines and it has often been cited as one of the greatest games of all time. It was followed by Super Street Fighter IV and Arcade Edition in 2010, 3D Edition in 2011, and Ultra Street Fighter IV in 2014. All versions of Street Fighter IV have sold over 9 million units across all platforms.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
+@inreference{noauthor_street_2022-1,
+  title = {\emph{Street }{{\emph{Fighter IV}}}},
+  booktitle = {Wikipedia},
+  date = {2022-07-25T19:53:54Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Street_Fighter_IV&oldid=1100411514},
+  urldate = {2022-09-03},
+  abstract = {Street Fighter IV (ストリートファイター IV, Sutorīto Faitā Fō) is a 2008 fighting game published by Capcom, who also co-developed the game with Dimps. It was the first original main entry in the series since Street Fighter III in 1997, a hiatus of eleven years. The coin-operated arcade game version was released in Japan on July 18, 2008, with North American arcades importing the machines by August. The console versions for the PlayStation 3 and Xbox 360 were released in Japan on February 12, 2009, and were sold in North American stores as early as February 16, with a February 18 intended release date.  The official European release was on February 20. A Microsoft Windows version was released on July 2, 2009, in Japan, July 3, 2009 in Europe and July 7, 2009, in the United States. A version for iOS was released on March 10, 2010. Also, an Android version was launched, initially as an exclusive for certain LG devices. Then by December 31, 2012, the exclusivity expired and the game was made available for all Android devices on the Play Store, with a region restriction that makes it available only in Japan. An updated version, Super Street Fighter IV, was released as a standalone title in April 2010.Street Fighter IV received universal critical acclaim; receiving universally high scores from many gaming websites and magazines and it has often been cited as one of the greatest games of all time. It was followed by Super Street Fighter IV and Arcade Edition in 2010, 3D Edition in 2011, and Ultra Street Fighter IV in 2014. All versions of Street Fighter IV have sold over 9 million units across all platforms.},
   langid = {english},
   annotation = {Page Version ID: 1100411514},
-  file = {/home/smokey/Zotero/storage/VUE87AIT/Street_Fighter_IV.html}
+  file = {/home/ccyanide/Zotero/storage/VUE87AIT/Street_Fighter_IV.html}
 }
 
-@article{noauthor_street_2022-2,
-  title = {{\emph{Street }}{{{\emph{Fighter III}}}}{\emph{: 3rd }}{{{\emph{Strike}}}}},
-  shorttitle = {{\emph{Street }}{{{\emph{Fighter III}}}}},
-  year = {2022},
-  month = aug,
-  journal = {Wikipedia},
+@inreference{noauthor_street_2022-2,
+  title = {\emph{Street }{{\emph{Fighter III}}}\emph{: 3rd }{{\emph{Strike}}}},
+  shorttitle = {\emph{Street }{{\emph{Fighter III}}}},
+  booktitle = {Wikipedia},
+  date = {2022-08-25T22:59:12Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Street_Fighter_III:_3rd_Strike&oldid=1106686885},
+  urldate = {2022-09-03},
   abstract = {Street Fighter III 3rd Strike: Fight for the Future (ストリートファイターIII サードストライク ファイト・フォー・ザ・フューチャー) is a 2D fighting game developed and published by Capcom, originally released for the arcades in 1999. It was ported to the Dreamcast, PlayStation 2, and Xbox between 2000 and 2010. A downloadable online version titled Street Fighter III: 3rd Strike Online Edition was released on PlayStation Network and Xbox Live Arcade in 2011. Street Fighter III 3rd Strike is the second follow-up to Street Fighter III, following Street Fighter III: 2nd Impact. Like its predecessors, it runs on the CP System III hardware. 3rd Strike increased the character roster by adding five new characters, notably including Chun-Li. It also added further refinements to the previous game's play mechanics and rules. The game was well received in all of its versions and has since been regarded as one of the greatest fighting games of all time. On 29 May 2018, Street Fighter III: 3rd Strike - Fight for the Future was released as a part of the Street Fighter 30th Anniversary Collection for the PlayStation 4, Xbox One, Steam and Nintendo Switch.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
   langid = {english},
   annotation = {Page Version ID: 1106686885},
-  file = {/home/smokey/Zotero/storage/TGX8V4QP/Street_Fighter_III_3rd_Strike.html}
+  file = {/home/ccyanide/Zotero/storage/TGX8V4QP/Street_Fighter_III_3rd_Strike.html}
 }
 
-@article{noauthor_super_2022,
-  title = {{\emph{Super }}{{{\emph{Smash Bros}}}}{\emph{. }}{{{\emph{Ultimate}}}}},
-  year = {2022},
-  month = sep,
-  journal = {Wikipedia},
-  abstract = {Super Smash Bros. Ultimate is a 2018 crossover fighting game developed by Bandai Namco Studios and Sora Ltd. and published by Nintendo for the Nintendo Switch. It is the fifth installment in the Super Smash Bros. series, succeeding Super Smash Bros. for Nintendo 3DS and Wii U. The game follows the series' traditional style of gameplay: controlling one of the various characters, players must use differing attacks to weaken their opponents and knock them out of an arena. It features a wide variety of game modes, including a campaign for single-player and multiplayer versus modes. Ultimate features 89 playable fighters, including all characters from previous Super Smash Bros. games alongside newcomers. The roster ranges from Nintendo mascots to characters from third-party franchises. Planning for the game had begun by December 2015, with full development starting after the completion of 3DS/Wii U's downloadable content (DLC). Series creator and director Masahiro Sakurai returned along with Bandai Namco Studios and Sora, the studios that developed 3DS/Wii U, with the return of the studios speeding up the preparation process. Sakurai's goal with Ultimate was to include every character from previous games in the series despite the various development and licensing challenges this would present. Several well-known video game musicians contributed to the soundtrack, with Hideki Sakamoto writing the main theme "Lifelight". Nintendo first teased Ultimate in a Nintendo Direct in March 2018 and fully revealed it at E3 2018 the following June. It later received two additional Directs before it was released on December 7, 2018. The game received universal acclaim, with some critics calling it the best of the series. They praised its amount of content and fine-tuning of existing Smash gameplay elements, although its online mode received criticism. Ultimate is the best-selling fighting game of all time, having sold over 28 million copies by March 2022, and is a popular competitive fighting game. The game was supported with downloadable content adding new fighters, stages, and other content from its release until October 2021.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english},
-  annotation = {Page Version ID: 1109273382},
-  file = {/home/smokey/Zotero/storage/TTMWXXCT/Super_Smash_Bros.html}
-}
-
-@article{noauthor_super_2022-1,
-  title = {{\emph{Super }}{{{\emph{Smash Bros}}}}{\emph{. }}{{{\emph{Melee}}}}},
-  year = {2022},
-  month = sep,
-  journal = {Wikipedia},
-  abstract = {Super Smash Bros. Melee is a 2001 crossover fighting video game developed by HAL Laboratory and published by Nintendo for the GameCube. It is the second installment in the Super Smash Bros. series. It features characters from Nintendo video game franchises such as Mario, The Legend of Zelda, Star Fox and Pok\'emon, among others. The stages and gameplay modes reference or take designs from these franchises as well. Melee includes all playable characters from the first game and also adds characters from additional franchises such as Fire Emblem, of which no games had been released outside Japan at the time, in addition to new stages and gameplay modes. Like other games in the Smash Bros. series, Melee's gameplay system offers an unorthodox approach to the fighting game genre, with a counter that measures damage with increasing percentages, representing the knockback the character will experience, rather than a depleting health bar seen in most fighting games. Melee was first released in Japan in November 2001, in the Americas in December 2001, and in Europe and Australia in May 2002. The game received widespread acclaim from critics, earning praise for its visuals, simple controls, gameplay, and orchestrated soundtrack, as well as several awards and acknowledgments from various publications; it is now considered one of the greatest video games ever made. It achieved strong sales upon its release, becoming the GameCube's best-selling title with over seven million copies sold by 2008. Considered one of the most competitively viable Smash Bros. games due to its fast-paced and offensive gameplay, Melee has been featured in many competitive gaming tournaments, boasting a dedicated grassroots fan community which has kept its competitive scene alive well beyond the game's original lifespan. It was followed by Super Smash Bros. Brawl for the Wii in 2008.},
-  copyright = {Creative Commons Attribution-ShareAlike License},
+@inreference{noauthor_super_2022,
+  title = {\emph{Super }{{\emph{Smash Bros}}}\emph{. }{{\emph{Melee}}}},
+  booktitle = {Wikipedia},
+  date = {2022-09-08T23:03:17Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Super_Smash_Bros._Melee&oldid=1109272383},
+  urldate = {2022-09-09},
+  abstract = {Super Smash Bros. Melee is a 2001 crossover fighting video game developed by HAL Laboratory and published by Nintendo for the GameCube. It is the second installment in the Super Smash Bros. series. It features characters from Nintendo video game franchises such as Mario, The Legend of Zelda, Star Fox and Pokémon, among others. The stages and gameplay modes reference or take designs from these franchises as well. Melee includes all playable characters from the first game and also adds characters from additional franchises such as Fire Emblem, of which no games had been released outside Japan at the time, in addition to new stages and gameplay modes. Like other games in the Smash Bros. series, Melee's gameplay system offers an unorthodox approach to the fighting game genre, with a counter that measures damage with increasing percentages, representing the knockback the character will experience, rather than a depleting health bar seen in most fighting games. Melee was first released in Japan in November 2001, in the Americas in December 2001, and in Europe and Australia in May 2002. The game received widespread acclaim from critics, earning praise for its visuals, simple controls, gameplay, and orchestrated soundtrack, as well as several awards and acknowledgments from various publications; it is now considered one of the greatest video games ever made. It achieved strong sales upon its release, becoming the GameCube's best-selling title with over seven million copies sold by 2008. Considered one of the most competitively viable Smash Bros. games due to its fast-paced and offensive gameplay, Melee has been featured in many competitive gaming tournaments, boasting a dedicated grassroots fan community which has kept its competitive scene alive well beyond the game's original lifespan. It was followed by Super Smash Bros. Brawl for the Wii in 2008.},
   langid = {english},
   annotation = {Page Version ID: 1109272383},
-  file = {/home/smokey/Zotero/storage/979L67CY/Super_Smash_Bros.html}
+  file = {/home/ccyanide/Zotero/storage/979L67CY/Super_Smash_Bros.html}
 }
 
-@misc{noauthor_wayback_2012-1,
-  title = {Wayback {{Machine}}},
-  year = {2012},
-  month = may,
-  howpublished = {https://web.archive.org/web/20120510191656/http://www.census.gov/compendia/statab/2012/tables/12s1325.pdf},
-  file = {/home/smokey/Zotero/storage/Y9XJ22N4/2012 - Wayback Machine.pdf}
-}
-
-@misc{noauthor_what_nodate,
-  title = {What {{Is}} the {{Average Salary}} in the {{USA}}?},
-  journal = {Indeed Career Guide},
-  abstract = {Understanding the average salary for someone in the U.S. can help you get a sense of how much you might expect to make when working in your chosen career.},
-  howpublished = {https://www.indeed.com/career-advice/pay-salary/average-salary-usa},
+@inreference{noauthor_super_2022-1,
+  title = {\emph{Super }{{\emph{Smash Bros}}}\emph{. }{{\emph{Ultimate}}}},
+  booktitle = {Wikipedia},
+  date = {2022-09-08T23:12:59Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Super_Smash_Bros._Ultimate&oldid=1109273382},
+  urldate = {2022-09-09},
+  abstract = {Super Smash Bros. Ultimate is a 2018 crossover fighting game developed by Bandai Namco Studios and Sora Ltd. and published by Nintendo for the Nintendo Switch. It is the fifth installment in the Super Smash Bros. series, succeeding Super Smash Bros. for Nintendo 3DS and Wii U. The game follows the series' traditional style of gameplay: controlling one of the various characters, players must use differing attacks to weaken their opponents and knock them out of an arena. It features a wide variety of game modes, including a campaign for single-player and multiplayer versus modes. Ultimate features 89 playable fighters, including all characters from previous Super Smash Bros. games alongside newcomers. The roster ranges from Nintendo mascots to characters from third-party franchises. Planning for the game had begun by December 2015, with full development starting after the completion of 3DS/Wii U's downloadable content (DLC). Series creator and director Masahiro Sakurai returned along with Bandai Namco Studios and Sora, the studios that developed 3DS/Wii U, with the return of the studios speeding up the preparation process. Sakurai's goal with Ultimate was to include every character from previous games in the series despite the various development and licensing challenges this would present. Several well-known video game musicians contributed to the soundtrack, with Hideki Sakamoto writing the main theme "Lifelight". Nintendo first teased Ultimate in a Nintendo Direct in March 2018 and fully revealed it at E3 2018 the following June. It later received two additional Directs before it was released on December 7, 2018. The game received universal acclaim, with some critics calling it the best of the series. They praised its amount of content and fine-tuning of existing Smash gameplay elements, although its online mode received criticism. Ultimate is the best-selling fighting game of all time, having sold over 28 million copies by March 2022, and is a popular competitive fighting game. The game was supported with downloadable content adding new fighters, stages, and other content from its release until October 2021.},
   langid = {english},
-  file = {/home/smokey/Zotero/storage/WL6Q4SUA/average-salary-usa.html}
+  annotation = {Page Version ID: 1109273382},
+  file = {/home/ccyanide/Zotero/storage/TTMWXXCT/Super_Smash_Bros.html}
 }
 
-@misc{noauthor_what_nodate-1,
+@online{noauthor_wayback_2012,
+  title = {Wayback {{Machine}}},
+  date = {2012-05-10},
+  url = {https://web.archive.org/web/20120510191656/http://www.census.gov/compendia/statab/2012/tables/12s1325.pdf},
+  urldate = {2022-09-14},
+  file = {/home/ccyanide/Zotero/storage/Y9XJ22N4/2012 - Wayback Machine.pdf}
+}
+
+@online{noauthor_what_nodate,
   title = {What {{Does}} an {{Information Technologist Do}}? {{Role}} and {{Skills}}},
   shorttitle = {What {{Does}} an {{Information Technologist Do}}?},
-  journal = {Indeed Career Guide},
+  url = {https://sg.indeed.com/career-advice/finding-a-job/what-does-information-technologist-do},
+  urldate = {2022-09-16},
   abstract = {Learn more about information technology (IT), discover what does an information technologist do and review the typical steps and skills involved in this role.},
-  howpublished = {https://sg.indeed.com/career-advice/finding-a-job/what-does-information-technologist-do},
   langid = {english},
-  file = {/home/smokey/Zotero/storage/7ZAZGMDN/what-does-information-technologist-do.html}
+  organization = {{Indeed Career Guide}},
+  file = {/home/ccyanide/Zotero/storage/7ZAZGMDN/what-does-information-technologist-do.html}
 }
 
-@misc{willingham_what_2018,
+@online{noauthor_what_nodate-1,
+  title = {What {{Is}} the {{Average Salary}} in the {{USA}}?},
+  url = {https://www.indeed.com/career-advice/pay-salary/average-salary-usa},
+  urldate = {2022-09-16},
+  abstract = {Understanding the average salary for someone in the U.S. can help you get a sense of how much you might expect to make when working in your chosen career.},
+  langid = {english},
+  organization = {{Indeed Career Guide}},
+  file = {/home/ccyanide/Zotero/storage/WL6Q4SUA/average-salary-usa.html}
+}
+
+@online{willingham_what_2018,
   title = {What Is {{eSports}}? {{A}} Look at an Explosive, Billion-Dollar Industry | {{CNN}}},
   author = {Willingham, AJ},
-  year = {2018},
-  month = aug,
-  journal = {What is eSports? A look at an explosive billion-dollar industry},
-  howpublished = {https://edition.cnn.com/2018/08/27/us/esports-what-is-video-game-professional-league-madden-trnd/index.html},
-  file = {/home/smokey/Zotero/storage/EGD88DAL/index.html}
+  date = {2018-08-27},
+  url = {https://edition.cnn.com/2018/08/27/us/esports-what-is-video-game-professional-league-madden-trnd/index.html},
+  urldate = {2022-09-03},
+  organization = {{What is eSports? A look at an explosive billion-dollar industry}},
+  file = {/home/ccyanide/Zotero/storage/EGD88DAL/index.html}
 }
 
+@preamble{ "\ifdefined\DeclarePrefChars\DeclarePrefChars{'’-}\else\fi " }
