--- a/main.tex
+++ b/main.tex
@@ -54,6 +54,11 @@
 
 \input{chapters/aspectos_tec.tex}
 
+\chapter{Diseño de la interfaz gráfica de usuario}
+\addcontentsline{toc}{chapter}{Diseño de la interfaz gráfica de usuario}
+
+\input{chapters/diseno.tex}
+
 \printglossary[type=\acronymtype]
 
 \bibliography{References}
