--- a/References.bib
+++ b/References.bib
@@ -130,6 +130,17 @@
   file = {/home/ccyanide/Zotero/storage/9AWJ3B6Q/Granblue_Fantasy_Versus.html}
 }
 
+@online{noauthor_granblue_2022-2,
+  title = {Granblue {{Fantasy Versus Wiki}}},
+  date = {2022-08-12T20:03:39Z},
+  url = {https://www.dustloop.com/w/Granblue_Fantasy_Versus},
+  urldate = {2022-11-27},
+  abstract = {The open resource for Granblue Fantasy Versus. Home to combos, character guides, frame data, hitboxes, and more.},
+  langid = {english},
+  organization = {{Dustloop Wiki}},
+  file = {/home/ccyanide/Zotero/storage/27H6XUJG/Granblue_Fantasy_Versus.html}
+}
+
 @online{noauthor_grasshopper_nodate,
   title = {Grasshopper ({{Character Balancing}} / {{Frame Data Tool}})},
   author = {, RobotMonkeyHead},
